Merged revisions 79393 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r79393 | victor.stinner | 2010-03-25 01:30:28 +0100 (jeu., 25 mars 2010) | 3 lines

  Issue #8226: sys.setfilesystemencoding() raises a LookupError if the encoding
  is unknown.
........